--- a/domestic.html
+++ b/domestic.html
@@ -11,6 +11,10 @@
 	  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 	</head>
    <body>
+   <div class="whatsapp">
+			<a href="tel:918130719306" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
+			<a href="https://wa.me/918130719306" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
+		</div>
 	<section class="about-banners">
 			<div class="navbar">
 				<nav>
@@ -51,7 +55,7 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/jk.jpg" class="img1card" >
+					<a href="jk.html"><img src="./assets/images/jk.jpg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="jk.html" class="link"><p class="title-text">JAMMU & KASHMIR</p></a>
@@ -59,7 +63,7 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/mauritius.jpeg" class="img1card" >
+					<a href="kerela.html"><img src="./assets/images/mauritius.jpeg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="kerela.html" class="link"><p class="title-text">KERELA</p></a>
@@ -67,7 +71,7 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/ladhak.jpg" class="img1card" >
+					<a href="ladakh.html"><img src="./assets/images/ladhak.jpg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="ladakh.html" class="link"><p class="title-text">LADAKH</p></a>
@@ -75,7 +79,7 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/sikkim.jpg" class="img1card" >
+					<a href="sikkim.html"><img src="./assets/images/sikkim.jpg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="sikkim.html" class="link"><p class="title-text">SIKKIM</p></a>
@@ -83,7 +87,7 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/bali.jpeg" class="img1card" >
+					<a href="#"><img src="./assets/images/bali.jpeg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="#" class="link"><p class="title-text">WEST-BENGAL</p></a>
@@ -91,7 +95,7 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/himachal.jpg" class="img1card" >
+					<a href="himachal.html"><img src="./assets/images/himachal.jpg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="himachal.html" class="link"><p class="title-text">HIMACHAL PRADESH</p></a>
