--- a/himachal.html
+++ b/himachal.html
@@ -10,6 +10,10 @@
 	  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
+	<div class="whatsapp">
+			<a href="tel:918130719306" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
+			<a href="https://wa.me/918130719306" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
+		</div>
 		<section class="about-banners">
 			<div class="navbar">
 				<nav>
@@ -48,9 +52,10 @@
 					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Hotel K.D.'s Villa, Court road, Siyal, Manali, Himachal Pradesh, India</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
 					<p class="p">One of the most popular hill stations in Himachal, Manali offers the ...</p>
+					<p class="p">Group size : Minimum 2 Pax </p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 8,999</span></p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;starting from <span style="text-decoration:line-through;">INR 10,499</span>&nbsp;&nbsp;<span class="tag">INR 9,499/-PP</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary"><a href="kd.html">View Tour</a></button>
 				</div>
@@ -64,9 +69,10 @@
 					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Hotel Naveen, opp. Deluxe Bus Stand, Siyal, Manali, Himachal Pradesh, India</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
 					<p class="p">One of the most popular hill stations in Himachal, Manali offers the ...</p>
+					<p class="p">Group size: Minimum 2 Pax</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 9,299</span></p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;starting from <span style="text-decoration:line-through;">INR 8,799</span>&nbsp;&nbsp;<span class="tag">INR 7,999/-PP</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary"><a href="naveen.html">View Tour</a></button>
 				</div>
@@ -80,11 +86,12 @@
 					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Hotel Rudra Palace Manali, Manali, Himachal Pradesh, India</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
 					<p class="p">One of the most popular hill stations in Himachal, Manali offers the ...</p>
+					<p class="p">Group size : Minimum 2 Pax</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 9,299</span></p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;starting from <span style="text-decoration:line-through;">INR 9,499</span>&nbsp;&nbsp;<span class="tag">INR 8,499/-PP</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
-					<button type="button" class="btn btn-outline-primary">View Tour</button>
+					<button type="button" class="btn btn-outline-primary"><a href="rudra.html">View Tour</a></button>
 				</div>
 			</div>
 		</div>
