--- a/international.html
+++ b/international.html
@@ -11,6 +11,10 @@
 	  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 	</head>
    <body>
+   <div class="whatsapp">
+			<a href="tel:918130719306" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
+			<a href="https://wa.me/918130719306" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
+		</div>
 	<section class="about-banners">
 			<div class="navbar">
 				<nav>
@@ -51,7 +55,7 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/bali.jpeg" class="img1card" >
+					<a href="bali.html"><img src="./assets/images/bali.jpeg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="bali.html" class="link"><p class="title-text">BALI</p></a>
@@ -59,7 +63,7 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/maldives.jpeg" class="img1card" >
+					<a href="maldives.html"><img src="./assets/images/maldives.jpeg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="maldives.html" class="link"><p class="title-text">MALDIVES</p></a>
@@ -67,7 +71,7 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/singapore.jpeg" class="img1card" >
+					<a href="singapore.html"><img src="./assets/images/singapore.jpeg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="singapore.html" class="link"><p class="title-text">SINGAPORE</p></a>
@@ -75,7 +79,7 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/thailand.jpeg" class="img1card" >
+					<a href="thailand.html"><img src="./assets/images/thailand.jpeg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="thailand.html" class="link"><p class="title-text">THAILAND</p></a>
@@ -83,7 +87,7 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/dubai.jpeg" class="img1card" >
+					<a href="dubai.html"><img src="./assets/images/dubai.jpeg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="dubai.html" class="link"><p class="title-text">DUBAI</p></a>
@@ -91,10 +95,18 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/mauritius.jpg" class="img1card" >
+					<a href="mauritius.html"><img src="./assets/images/mauritius.jpg" class="img1card" ></a>
 				</div>
 				<div class="title">
 					<a href="mauritius.html" class="link"><p class="title-text">MAURITIUS</p></a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="img-domestic">
+					<a href="#"><img src="./assets/images/bali.jpeg" class="img1card" ></a>
+				</div>
+				<div class="title">
+					<a href="#" class="link"><p class="title-text">GREECE</p></a>
 				</div>
 			</div>
 		</div>
