--- a/sikkim.html
+++ b/sikkim.html
@@ -10,6 +10,10 @@
 	  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
+	<div class="whatsapp">
+			<a href="tel:918130719306" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
+			<a href="https://wa.me/918130719306" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
+		</div>
 		<section class="about-banners">
 			<div class="navbar">
 				<nav>
@@ -44,13 +48,14 @@
 					<img src="./assets/images/sikkim-img.jpg" class="img1card" >
 				</div>
 				<div class="hotel">
-					<p class="para">3 Nights Gangtok- Hotel 100 Patels</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Hotel 100 Petals, THAPA GOLAI, Gangtok, Sikkim, India</p>
+					<p class="para">3 Nights Gangtok- The Ridge</p>
+					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;The Ridge, Gangtok, Sikkim, India</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
 					<p class="p">Incredibly alluring, pleasantly boisterous and wreathed in clouds – Gangtok, the capital of ...</p>
+					<p>Group size : Minimum 2 Pax</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 14,999</span></p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;starting from <span style="text-decoration:line-through;">INR 16,499</span>&nbsp;&nbsp;<span class="tag">INR 14,999/-PP</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
@@ -61,13 +66,14 @@
 					<img src="./assets/images/sikkim-img1.jpg" class="img1card" >
 				</div>
 				<div class="hotel">
-					<p class="para">3 Nights Gangtok- The Golden Crest</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;The Golden Crest Hotel, National Highway 10, Amdo Golai, Deorali Bazar, Gangtok, Sikkim, India</p>
+					<p class="para">Best of HIMALAYAS (Gangtok 2N - Darjeeling 2N)</p>
+					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Gangtok, Sikkim, India</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
 					<p class="p">Incredibly alluring, pleasantly boisterous and wreathed in clouds – Gangtok, the capital of ...</p>
+					<p class="p">Group size : Minimum 2 Pax</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 17,999</span></p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;starting from <span style="text-decoration:line-through;">INR 21,999</span>&nbsp;&nbsp;<span class="tag">INR 19,999/-PP</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
@@ -78,13 +84,14 @@
 					<img src="./assets/images/sikkim-img2.jpg" class="img1card" >
 				</div>
 				<div class="hotel">
-					<p class="para">3 Nights Gangtok- Orange Village Resort</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Sterling Gangtok - Orange Village, near Sikkim University, Gangtok, Sikkim, India</p>
+					<p class="para">Amazing Dello Hills (Darjeeling 2N - Kalimpong 1N - Gangtok 2N)</p>
+					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Sikkim, India</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
 					<p class="p">Incredibly alluring, pleasantly boisterous and wreathed in clouds – Gangtok, the capital of ...</p>
+					<p class="p">Group size : Minimum 2 Pax</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 24,999</span></p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;starting from <span style="text-decoration:line-through;">INR 26,499</span>&nbsp;&nbsp;<span class="tag">INR 24,499/-PP</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
@@ -95,13 +102,14 @@
 					<img src="./assets/images/sikkim-img3.jpg" class="img1card" >
 				</div>
 				<div class="hotel">
-					<p class="para">3 Nights Darjeeling- Mount Himalayan Resort</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Mount Himalayan Resort, Darjeeling, Gandhi Road, Limbugaon, Darjeeling, West Bengal, India</p>
+					<p class="para">3Tiger Hills (Darjeeling 3N)- Hotel North Star</p>
+					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Darjeeling, West Bengal, India</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
 					<p class="p">Incredibly alluring, pleasantly boisterous and wreathed in clouds – Gangtok, the capital of ...</p>
+					<p class="p">Group size : minimum 2 Pax</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 15,999</span></p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;starting from <span style="text-decoration:line-through;">INR 17,499</span>&nbsp;&nbsp;<span class="tag">INR 15,499/-PP</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
@@ -112,13 +120,14 @@
 					<img src="./assets/images/sikkim-img4.jpg" class="img1card" >
 				</div>
 				<div class="hotel">
-					<p class="para">3 Nights Darjeeling- Hotel Dip Place</p>
+					<p class="para">Tiger Hills (Darjeeling 3N)- Hotel Pine Tress</p>
 					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Hotel Dip Palace, near भारतीय स्टेट बैंक, Chauk Bazaar, Darjeeling, West Bengal, India</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
 					<p class="p">Incredibly alluring, pleasantly boisterous and wreathed in clouds – Gangtok, the capital of ...</p>
+					<p class="p">Group size : Minimum 2 Pax</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 13,999</span></p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;starting from <span style="text-decoration:line-through;">INR 21,499</span>&nbsp;&nbsp;<span class="tag">INR 19,499/-PP</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
