--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,10 @@
 	  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 	</head>
    <body>
+   <div class="whatsapp">
+			<a href="tel:918130719306" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
+			<a href="https://wa.me/918130719306" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
+		</div>
 	<section class="about-banners">
 			<div class="navbar">
 				<nav>
