--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 	</head>
    <body id="blur">
 		<div class="whatsapp">
+			<a href="tel:918130719306" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
 			<a href="https://wa.me/918130719306" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
 		</div>
+		<!--<div class="phone">
+			<a href="#" class><img src="./assets/images/phone.png" class="whatsicon"></a>
+		</div>-->
 		<!--<div class="fixed">
 			<h4 class="h4">
 				<a href="popup.html" class="fixed-link">View Form</a>
