--- a/kd.html
+++ b/kd.html
@@ -12,6 +12,10 @@
 	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	</head>
    <body id="blur">
+   <div class="whatsapp">
+			<a href="tel:918130719306" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
+			<a href="https://wa.me/918130719306" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
+		</div>
 	<section class="about-banners">
 			<div class="navbar">
 				<nav>
@@ -67,7 +71,7 @@
 				</div>
 				<div class="container-content">
 					<h3>Group Size</h3>
-					<p>Unlimited</p>
+					<p>Minimum 2 Pax </p>
 				</div>
 			</div>
 				</div>
@@ -86,7 +90,7 @@
 					</ul>
 					</div>
 					<div class="itinerary">
-					<h3>Itinerary</h3>
+					<!--<h3>Itinerary</h3>-->
 						<!--<div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
@@ -182,8 +186,8 @@
 			<div class="right-box1">
 				<div class="right-top">
 					<ul class="list-group">
-						<li class="p-4 list-group-item active" aria-current="true">from &nbsp;<span class="cont">Rs. 8,999</span></li>
-						<li class="list-group-item"><strong>Inquiry</strong></li>
+						<li class="p-4 list-group-item active" aria-current="true">starting from &nbsp;<span class="cont">INR 9,599/-PP</span></li>
+						<li class="list-group-item"><strong>Lets help you plan your trip</strong></li>
 						<li class="list-group-item">
 							<form class="form" method="post" autocomplete="off" name="inquiry-sheet">
 								<div class="textbox"><input type="text" name="fullname" placeholder="Name" class="input" required></div>
