--- a/rudra.html
+++ b/rudra.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
       <meta name="viewport" content="width=device-width, intial-scale=1.0" />
-      <title>GOA-Explore Abroad</title>
+      <title>HIMACHAL-Explore Abroad</title>
       <link rel="stylesheet" href="./assets/css/slide1.css" />
 	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> 
 	  <script src="https://use.fontawesome.com/6874ba9d3a.js"></script>
@@ -37,7 +37,7 @@
 				</nav>
 			</div>
 			<div class="banner-text">
-				<p class="main-header"data-text="Love where you're going">Zuri White Sands-Goa 3 Nights 4 Days</p>
+				<p class="main-header"data-text="Love where you're going">Hotel Rudra Palace</p>
 				<!--<p class="main-para">Book incredible things to do around the world.</p>-->
 			</div>
 			<!--<svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,128C120,160,240,224,360,234.7C480,245,600,203,720,160C840,117,960,75,1080,80C1200,85,1320,139,1380,165.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>-->
@@ -52,7 +52,7 @@
 				</div>
 				<div class="container-content">
 					<h3>Duration</h3>
-					<p>4 days 3 nights</p>
+					<p>6 days 5 nights</p>
 				</div>
 			</div>
 			
@@ -76,18 +76,17 @@
 			</div>
 				</div>
 				<div class="gallery">
-					<img src="./assets/images/goa.jpg" class="gallery-img">
+					<img src="./assets/images/himachal-img1.jpg" class="gallery-img">
 				</div>
 				<div class="content">
 					<div class="highlights">
 					<h4>HIGHLIGHTS</h4>
 					<ul>
-						<li>Complimentary uses of Swimming Pool following COVID -19 norms.</li>
-						<li>25% discount on Soft & Hard Beverages at the Tangerine Bar.</li>
-						<li>Complimentary wireless internet (maximum 3 devices per room)</li>
-						<li>25 % Discount at The Maya Spa once during stay (Conditions Apply once its operational)</li>
-						<li>15 % discount on recreational activities & the beauty salon(Conditions Apply)</li>
-						<li>Travel insurance</li>
+						<li>2 nights in Volvo</li>
+						<li>3 Nights in Hotel</li>
+						<li>Sightseeing of Kullu with Naggar castle by Alto car</li>
+						<li>Solang Valley sightseeing by Alto car</li>
+						<li>Local Manali Sightseeing by Alto car</li>
 					</ul>
 					</div>
 					<div class="itinerary">
@@ -158,30 +157,24 @@
 					<div class="include">
 						
 						<div class="include-left">
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Stay for mentioned duration</p>
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Railway Station/ Airport Transfers</p>
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Immunity Booster Welcome Drink on arrival</p>
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Bottle of Goan wine on arrival</p>
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Buffet Breakfast & Lunch/ Dinner per night of stay at Waterfalls Café</p>
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Evening Hi – Tea</p>
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Complimentary uses of Swimming Pool following COVID -19 norms.</p>
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;25% discount on Soft & Hard Beverages at the Tangerine Bar.</p>
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Complimentary wireless internet (maximum 3 devices per room)</p>
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;25 % Discount at The Maya Spa once during stay (Conditions Apply once its operational)</p>
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;15 % discount on recreational activities & the beauty salon(Conditions Apply)</p>
-							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Travel insurance</p>
+							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Seat in Volvo Bus</p>
+							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;3 Nights in Hotel</p>
+							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;2 Nights in Volvo</p>
+							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Breakfast and Dinner in Hotel</p>
+							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;1 Room on Double Sharing</p>
+							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Bus stand Transfers</p>
+							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Sightseeing of Kullu with Naggar castle by Alto car</p>
+							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Solang Valley sightseeing by Alto car</p>
+							<p><i class="bi bi-check-circle"></i>&nbsp;&nbsp;Local Manali Sightseeing by Alto car</p>
 						</div>
 						<div class="exclude">
+							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Anything not mentioned in Inclusions</p>
+							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Visit to Manikaran and Atal Tunnel</p>
+							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Visit to Rohtang pass (Paid directly as per Availability).</p>
+							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Any tip or Gratuity.</p>
+							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Any Expense of personal nature.</p>
 							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;GST 5%</p>
-							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Airfare</p>
-							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Anything not mentioned under the category "Package Inclusions"</p>
-							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Any other meal not mentioned in price includes.</p>
-							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Any other destination not mentioned in itinerary.</p>
-							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Any monument entrance fees, camera fees, guide charges.</p>
-							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Any expenses of personal nature.</p>
-							<!--<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Tips, Insurance, Laundry, Phone Calls, Guide Fee & Camera Fee</p>
-							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Services of vehicle on leisure days and after finishing the sightseeing tour</p>
-							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Adventure activity costs (Pony Ride, Camel Safari, Rafting, paragliding etc)</p>
+							<!--<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Adventure activity costs (Pony Ride, Camel Safari, Rafting, paragliding etc)</p>
 							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Medical & Travel insurance</p>
 							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Additional Costs due to Flight Cancellations, Road blocks, natural calamities and nature’s fury</p>
 							<p><i class="bi bi-x-circle"></i>&nbsp;&nbsp;Anything not mentioned under the category “PACKAGE INCLUSIONS”</p>-->
@@ -193,8 +186,8 @@
 			<div class="right-box1">
 				<div class="right-top">
 					<ul class="list-group">
-						<li class="p-4 list-group-item active" aria-current="true">starting from &nbsp;<span class="cont">INR 15,499/-PP</span></li>
-						<li class="list-group-item"><strong>Inquiry</strong></li>
+						<li class="p-4 list-group-item active" aria-current="true">starting from &nbsp;<span class="cont">INR 8,499/-PP</span></li>
+						<li class="list-group-item"><strong>Lets help you plan your trip</strong></li>
 						<li class="list-group-item">
 							<form class="form" method="post" autocomplete="off" name="inquiry-sheet">
 								<div class="textbox"><input type="text" name="fullname" placeholder="Name" class="input" required></div>
