--- a/ladakh.html
+++ b/ladakh.html
@@ -87,9 +87,9 @@
 			<div class="f-card">
 				<h3 class="f-head">NEED HELP?<span class="line">....</span></h3>
 				<p class="f-para">Follow Us</p>
-				<h2 class="f-head1">+ 91 8130-719-306</h2>
+				<h2 class="f-head1"><span><img src="./assets/images/insta.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/link.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/facebook.png" style="width:10%;"></span></h2>
 				<p class="f-para">Call Us</p>
-				<h2 class="f-head1">+ 91 8130-719-306</h2>
+				<h2 class="f-head1"><a href="tel:91 8130-719-306" style="text-decoration:none; color:black">+ 91 8130-719-306</a></h2>
 				<p class="f-para">Email For Us</p>
 				<h2 class="f-head1">operations@exploreabroad.co.in</h2>
 			</div>
