--- a/jk.html
+++ b/jk.html
@@ -57,7 +57,7 @@
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag"><br><b>INR 4,999/Person</b></span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
-					<button type="button" class="btn btn-outline-primary">View Tour</button>
+					<button type="button" class="btn btn-outline-primary"><a href="form.html" style="text-decoration:none; color:#1e90ff">Customize</a></button>
 				</div>
 			</div>
 			<div class="cards1">
@@ -74,7 +74,7 @@
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag"><br><b>INR 6,999/Person</b></span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;4Nights 5Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
-					<button type="button" class="btn btn-outline-primary">View Tour</button>
+					<button type="button" class="btn btn-outline-primary"><a href="form.html" style="text-decoration:none; color:#1e90ff">Customize</a></button>
 				</div>
 			</div>
 			<div class="cards2">
@@ -91,7 +91,7 @@
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag"><br><b>INR 7,999/Person</b></span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;5Nights 6Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
-					<button type="button" class="btn btn-outline-primary">View Tour</button>
+					<button type="button" class="btn btn-outline-primary"><a href="form.html" style="text-decoration:none; color:#1e90ff">Customize</a></button>
 				</div>
 			</div>
 			<div class="cards3">
@@ -108,7 +108,7 @@
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag"><br><b>INR 8,999/Person</b></span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;5Nights 6Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
-					<button type="button" class="btn btn-outline-primary">View Tour</button>
+					<button type="button" class="btn btn-outline-primary"><a href="form.html" style="text-decoration:none; color:#1e90ff">Customize</a></button>
 				</div>
 			</div>
 			<div class="cards4">
@@ -124,7 +124,7 @@
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag"><br><b>INR 13,599/Person</b></span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;6Nights 7Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
-					<button type="button" class="btn btn-outline-primary">View Tour</button>
+					<button type="button" class="btn btn-outline-primary"><a href="form.html" style="text-decoration:none; color:#1e90ff">Customize</a></button>
 				</div>
 			</div>
 		</div>
@@ -152,9 +152,9 @@
 			<div class="f-card">
 				<h3 class="f-head">NEED HELP?<span class="line">....</span></h3>
 				<p class="f-para">Follow Us</p>
-				<h2 class="f-head1">+ 91 8130-719-306</h2>
+				<h2 class="f-head1"><span><img src="./assets/images/insta.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/link.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/facebook.png" style="width:10%;"></span></h2>
 				<p class="f-para">Call Us</p>
-				<h2 class="f-head1">+ 91 8130-719-306</h2>
+				<h2 class="f-head1"><a href="tel:91 8130-719-306" style="text-decoration:none; color:black">+ 91 8130-719-306</a></h2>
 				<p class="f-para">Email For Us</p>
 				<h2 class="f-head1">operations@exploreabroad.co.in</h2>
 			</div>
