--- a/mauritius.html
+++ b/mauritius.html
@@ -58,7 +58,7 @@
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 46,999</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;6Nights 7Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Honeymoon</p>
-					<button type="button" class="btn btn-outline-primary">View Tour</button>
+					<button type="button" class="btn btn-outline-primary"><a href="form.html" style="text-decoration:none; color:#1e90ff">Customize</a></button>
 				</div>
 			</div>
 			
@@ -88,9 +88,9 @@
 			<div class="f-card">
 				<h3 class="f-head">NEED HELP?<span class="line">....</span></h3>
 				<p class="f-para">Follow Us</p>
-				<h2 class="f-head1">+ 91 8130-719-306</h2>
+				<h2 class="f-head1"><span><img src="./assets/images/insta.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/link.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/facebook.png" style="width:10%;"></span></h2>
 				<p class="f-para">Call Us</p>
-				<h2 class="f-head1">+ 91 8130-719-306</h2>
+				<h2 class="f-head1"><a href="tel:91 8130-719-306" style="text-decoration:none; color:black">+ 91 8130-719-306</a></h2>
 				<p class="f-para">Email For Us</p>
 				<h2 class="f-head1">operations@exploreabroad.co.in</h2>
 			</div>
