--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 		<div class="contact">
 			<div class="form">
 				<div class="box">
-				<form method="post" autocomplete="off">
+				<form method="post" autocomplete="off" name="contact-sheet">
 				<label>Name</label><br>
 				<input type="text" name="name" placeholder="&nbsp;Enter Your Complete Name" class="input" required><br>
 				<label>Email</label><br>
@@ -54,7 +54,7 @@
 				<input type="tel" name="phone" placeholder="Enter Your Valid Contact Number" class="input" required><br>
 				<label>Message</label><br>
 				<input type="text" name="message" placeholder="Enter Your Message" class="input" required><br>
-				<button type="button" class="btn">Submit</button>
+				<button button type="submit" name="submit" class="btn" value="Send message">Submit</button>
 				</form>
 				</div>
 			</div>
@@ -120,5 +120,21 @@
 			</div>
 		</div>
 		<br><br>
-   </body>
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+		<script>
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbw3wBSgSwzMbfK0PsU78Cp1c6bze27fNK4D7bL2Rx4XMSJ8lzBJxLPEmdQXnSLqDK1d-w/exec'
+            const form = document.forms['contact-sheet']
+          
+            form.addEventListener('submit', e => {
+              e.preventDefault()
+              fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+                .then(response => swal("Thanks for Contacting us..!", "We will contact you soon", "success"))
+                .catch(error => console.error('Error!', error.message))
+            })
+          </script>
+		  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </body>
 </html>
