contact address update

--- a/contact.html
+++ b/contact.html
@@ -63,9 +63,9 @@
 				<div class="box2">
 					<h3 class="head3">Contact Us</h3>
 					<p class="para1">Address:</p>
-					<p class="para">Plot no 31-32</p>
-					<p class="para">Vishnu Garden Opposite Civil Hospital</p>
-					<p class="para">Jagadhri-135003</p>
+					<p class="para">Office no : 180/38</p>
+					<p class="para">Sector 16 B, Vasundhara</p>
+					<p class="para">Ghaziabad, Uttar Pradesh</p>
 				</div>
 				<div class="box2">
 					<p class="para1">Contact No:</p>
