--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	</head>
    <body id="blur">
 		<div class="whatsapp">
-			<a href="tel:918130719306" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
-			<a href="https://wa.me/918130719306" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
+			<a href="tel:+918766246693" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
+			<a href="https://wa.me/918766246693" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
 		</div>
 		<!--<div class="phone">
 			<a href="#" class><img src="./assets/images/phone.png" class="whatsicon"></a>
@@ -124,7 +124,7 @@
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-calendar-week"></i></span>&nbsp;&nbsp;5 Days & 4 Nights</p>
 						</div>
 						<div class="price">
-							<p class="cards-para3"><i class="bi bi-tag"></i>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="cards-span1">Rs. 30,999</span></p>
+							<p class="cards-para3"><i class="bi bi-tag"></i>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="cards-span1">INR 21,499/-PP</span></p>
 						</div>
 					</div>
 				</div>
@@ -143,7 +143,7 @@
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-calendar-week"></i></span>&nbsp;&nbsp;4 Days & 3 Nights</p>
 						</div>
 						<div class="price">
-							<p class="cards-para3"><i class="bi bi-tag"></i>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="cards-span1">Rs. 16,999</span></p>
+							<p class="cards-para3"><i class="bi bi-tag"></i>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="cards-span1">INR 15,499/-PP</span></p>
 						</div>
 					</div>
 				</div>
@@ -164,7 +164,7 @@
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-calendar-week"></i></span>&nbsp;&nbsp;6 Days & 5 Nights</p>
 						</div>
 						<div class="price">
-							<p class="cards-para3"><i class="bi bi-tag"></i>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="cards-span1">Rs. 8,999</span></p>
+							<p class="cards-para3"><i class="bi bi-tag"></i>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="cards-span1">INR 9,499/-PP</span></p>
 						</div>
 					</div>
 				</div>
@@ -183,7 +183,7 @@
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;6 Days & 5 Nights</p>
 						</div>
 						<div class="price">
-							<p class="cards-para3"><i class="bi bi-tag"></i>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="cards-span1">Rs. 8,999</span></p>
+							<p class="cards-para3"><i class="bi bi-tag"></i>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="cards-span1">INR 7,999/-PP</span></p>
 						</div>
 					</div>
 				</div>
@@ -446,9 +446,9 @@
 				<p class="f-para">Follow Us</p>
 				<h2 class="f-head1"><span><img src="./assets/images/insta.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/link.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/facebook.png" style="width:10%;"></span></h2>
 				<p class="f-para">Call Us</p>
-				<h2 class="f-head1"><a href="tel:91 8130-719-306" style="text-decoration:none; color:black">+ 91 8130-719-306</a></h2>
+				<h2 class="f-head1"><a href="tel:+918766246693" style="text-decoration:none; color:black">+ 91 8766-246-693</a></h2>
 				<p class="f-para">Email For Us</p>
-				<h2 class="f-head1">operations@exploreabroad.co.in</h2>
+				<h2 class="f-head1"><a href="mailto:sales@exploreabroad.in" style="text-decoration:none; color:black">sales@exploreabroad.in</a></h2>
 			</div>
 			<div class="f-card1">
 				<h3 class="f-head">LINKS<span class="line">....</span></h3>
