--- a/international.html
+++ b/international.html
@@ -12,8 +12,8 @@
 	</head>
    <body>
    <div class="whatsapp">
-			<a href="tel:918130719306" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
-			<a href="https://wa.me/918130719306" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
+			<a href="tel:+918766246693" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
+			<a href="https://wa.me/918766246693" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
 		</div>
 	<section class="about-banners">
 			<div class="navbar">
@@ -47,10 +47,10 @@
 		<div class="domestic">
 			<div class="box">
 				<div class="img-domestic">
-					<img src="./assets/images/ladhak.jpg" class="img1card" >
+					<a href="form.html"><img src="./assets/images/ladhak.jpg" class="img1card" ></a>
 				</div>
 				<div class="title">
-					<a href="#" class="link"><p class="title-text">SWITZERLAND</p></a>
+					<a href="form.html" class="link"><p class="title-text">SWITZERLAND</p></a>
 				</div>
 			</div>
 			<div class="box">
@@ -103,10 +103,10 @@
 			</div>
 			<div class="box">
 				<div class="img-domestic">
-					<a href="#"><img src="./assets/images/bali.jpeg" class="img1card" ></a>
+					<a href="form.html"><img src="./assets/images/bali.jpeg" class="img1card" ></a>
 				</div>
 				<div class="title">
-					<a href="#" class="link"><p class="title-text">GREECE</p></a>
+					<a href="form.html" class="link"><p class="title-text">GREECE</p></a>
 				</div>
 			</div>
 		</div>
@@ -137,9 +137,9 @@
 				<p class="f-para">Follow Us</p>
 				<h2 class="f-head1"><span><img src="./assets/images/insta.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/link.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/facebook.png" style="width:10%;"></span></h2>
 				<p class="f-para">Call Us</p>
-				<h2 class="f-head1"><a href="tel:91 8130-719-306" style="text-decoration:none; color:black">+ 91 8130-719-306</a></h2>
+				<h2 class="f-head1"><a href="tel:+918766246693" style="text-decoration:none; color:black">+ 91 8766-246-693</a></h2>
 				<p class="f-para">Email For Us</p>
-				<h2 class="f-head1">operations@exploreabroad.co.in</h2>
+				<h2 class="f-head1"><a href="mailto:sales@exploreabroad.in" style="text-decoration:none; color:black">sales@exploreabroad.in</a></h2>
 			</div>
 			<div class="f-card1">
 				<h3 class="f-head">LINKS<span class="line">....</span></h3>
