--- a/kerela.html
+++ b/kerela.html
@@ -11,8 +11,8 @@
 	</head>
 	<body>
 	<div class="whatsapp">
-			<a href="tel:918130719306" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
-			<a href="https://wa.me/918130719306" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
+			<a href="tel:+918766246693" target="_blank" class="whatslink"><img src="./assets/images/phone.png" class="whatsicon"></a>
+			<a href="https://wa.me/918766246693" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
 		</div>
 		<section class="about-banners">
 			<div class="navbar">
@@ -35,13 +35,13 @@
 				</nav>
 			</div>
 			<div class="banner-text">
-				<p class="main-header"data-text="Love where you're going">Kerela</p>
+				<p class="main-header"data-text="Love where you're going">Kerala</p>
 				<p class="main-para">Book incredible things to do around the world.</p>
 			</div>
 			<svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,128C120,160,240,224,360,234.7C480,245,600,203,720,160C840,117,960,75,1080,80C1200,85,1320,139,1380,165.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
 		</section>
 		
-		<h1 class="top-destinations">Kerela : Trending Tours</h1><br>
+		<h1 class="top-destinations">Kerala : Trending Tours</h1><br>
 		<div class="container-cards">
 			<div class="cards">
 				<div class="img">
@@ -54,7 +54,7 @@
 					<p class="p">Cities Included - Munnar, Kovalam, Kumarakom, Thekkady</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">INR 8,999/Person</span></p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;starting from <span style="text-decoration:line-through;">INR 9,999</span>&nbsp;&nbsp;<span class="tag">INR 8,999/Person</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary"><a href="form.html" style="text-decoration:none; color:#1e90ff">Customize</a></button>
 				</div>
@@ -70,7 +70,7 @@
 					<p class="p">Cities Included - Cochin, Kovalam, Kumarakom, Thekkady, Munnar</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">INR 10,999/Person</span></p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;starting from <span style="text-decoration:line-through;">INR 11,999</span>&nbsp;&nbsp;<span class="tag">INR 10,999/Person</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary"><a href="form.html" style="text-decoration:none; color:#1e90ff">Customize</a></button>
 				</div>
@@ -86,7 +86,7 @@
 					<p class="p">Cities Included - Munnar, Thekkady, Alleppey, Kovalam</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">INR 18,999</span></p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;starting from <span style="text-decoration:line-through;">INR 19,999</span>&nbsp;&nbsp;<span class="tag">INR 18,999</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary"><a href="form.html" style="text-decoration:none; color:#1e90ff">Customize</a></button>
 				</div>
@@ -118,9 +118,9 @@
 				<p class="f-para">Follow Us</p>
 				<h2 class="f-head1"><span><img src="./assets/images/insta.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/link.png" style="width:10%;"></span>&nbsp;&nbsp;<span><img src="./assets/images/facebook.png" style="width:10%;"></span></h2>
 				<p class="f-para">Call Us</p>
-				<h2 class="f-head1"><a href="tel:91 8130-719-306" style="text-decoration:none; color:black">+ 91 8130-719-306</a></h2>
+				<h2 class="f-head1"><a href="tel:+918766246693" style="text-decoration:none; color:black">+ 91 8766-246-693</a></h2>
 				<p class="f-para">Email For Us</p>
-				<h2 class="f-head1">operations@exploreabroad.co.in</h2>
+				<h2 class="f-head1"><a href="mailto:sales@exploreabroad.in" style="text-decoration:none; color:black">sales@exploreabroad.in</a></h2>
 			</div>
 			<div class="f-card1">
 				<h3 class="f-head">LINKS<span class="line">....</span></h3>
